some alignment fixes

--- a/PKCalc/src/css/main.css
+++ b/PKCalc/src/css/main.css
@@ -516,7 +516,7 @@ table.field {
 }
 
 [hidden], .hide {
-    display: none;
+    display: none !important;
 }
 
 /* pokemon containers */
